--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,79 @@
 @import url(style.css);
+@import url(variables.css);
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+body{
+    display: flex;
+    flex-flow: column wrap;
+}
+.page1 {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-flow: column wrap;
+    background: var(--color-secundary);
+
+    border: 1px solid black;
+
+}
+.page1 header .menu {
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+.page1 header .menu .part1 {
+    width: 30%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+.page1 header .menu .part1  >p{
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.page1 header .menu .part2  >p{
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.page1 header .menu .part2 {
+    width: 30%;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+.page1 header .menu .logo{
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.page1 >main {
+    opacity: 0.2;
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    height: 80vh;
+    z-index: 2;
+
+    border: 1px solid white;
+}
+.page1 main .img {
+
+    width: 40%;
+    border:1px solid white;
+}
+.page1 main .img >img {
+    max-width: 100%;
+    object-fit: fill;
+}
+.page1 main .contain {
+    width: 60%;
+    display: flex;
+    flex-flow: column wrap;
+}
