--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,45 @@
 @import url(style.css);
 @import url(variables.css);
 
-*{
+
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     display: flex;
     flex-flow: column wrap;
 }
+
 .page1 {
     width: 100%;
     height: 100vh;
     display: flex;
     flex-flow: column wrap;
     background: var(--color-secundary);
-
-    border: 1px solid black;
-
 }
+
+.page1 .back{
+    position: absolute;
+    opacity: 0.1;
+    width: 100%;
+    height: auto;
+    border: 1px solid white;
+}
+.page1 .back >img {
+    width: 100%;
+    height: 100vh;
+    object-fit:fill ;
+}
+
 .page1 header .menu {
     width: 100%;
     display: flex;
     align-items: center;
 }
+
 .page1 header .menu .part1 {
     width: 30%;
     display: flex;
@@ -32,14 +47,17 @@ body{
     justify-content: space-evenly;
     align-items: flex-start;
 }
-.page1 header .menu .part1  >p{
+
+.page1 header .menu .part1>p {
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto Slab";
 }
-.page1 header .menu .part2  >p{
+
+.page1 header .menu .part2>p {
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto Slab";
 }
+
 .page1 header .menu .part2 {
     width: 30%;
     display: flex;
@@ -47,33 +65,55 @@ body{
     justify-content: space-evenly;
     align-items: flex-start;
 }
-.page1 header .menu .logo{
+
+.page1 header .menu .logo {
     width: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.page1 >main {
-    opacity: 0.2;
-    display: flex;
-    flex-flow: row wrap;
+.page1 main {
     width: 100%;
-    height: 80vh;
-    z-index: 2;
-
-    border: 1px solid white;
+    display: flex;
+    flex-direction: row;
 }
 .page1 main .img {
-
-    width: 40%;
-    border:1px solid white;
+    width: 50%;
+    height: 80vh;
+    display: flex;
+    border: 1px solid white;
+    justify-content: flex-end;
+    align-items: center;
 }
 .page1 main .img >img {
     max-width: 100%;
-    object-fit: fill;
+    object-fit: contain;    
+    padding: 0 2rem 0 0.5rem;
 }
 .page1 main .contain {
-    width: 60%;
+    width: 36%;
     display: flex;
     flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+}
+.page1 main .contain >h1 {
+    font-size: 55px;
+    color: var(--color-primary);
+    font-weight: 900;
+}
+.page1 main .contain >p {
+    font-size: 20px;
+    font-style: normal;
+    font-display: initial;
+    color: var(--color-font);
+    font-weight: 900;
+}
+.page1 main .contain >button {
+    font-size: 50px;
+    color: var(--color-secundary);
+    background:var(--color-primary);
+    padding: 1rem;
+    font-weight: 900;
 }
