--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Roboto Slab";
 }
 
 body {
@@ -26,7 +27,8 @@ body {
     opacity: 0.1;
     width: 100%;
     height: auto;
-    border: 1px solid white;
+
+
 }
 .page1 .back >img {
     width: 100%;
@@ -36,8 +38,10 @@ body {
 
 .page1 header .menu {
     width: 100%;
+    margin: 15px;
     display: flex;
     align-items: center;
+    justify-content: space-around;
 }
 
 .page1 header .menu .part1 {
@@ -51,11 +55,15 @@ body {
 .page1 header .menu .part1>p {
     color: white;
     font-family: "Roboto Slab";
+    font-weight: 900;
+    text-transform: uppercase;
 }
 
 .page1 header .menu .part2>p {
     color: white;
     font-family: "Roboto Slab";
+    font-weight: 900;
+    text-transform: uppercase;
 }
 
 .page1 header .menu .part2 {
@@ -67,6 +75,8 @@ body {
 }
 
 .page1 header .menu .logo {
+    padding: 2rem 0 0 0;
+    object-fit: contain;
     width: 30%;
     display: flex;
     justify-content: center;
@@ -76,12 +86,13 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row;
+    z-index: 2;
 }
 .page1 main .img {
     width: 50%;
     height: 80vh;
     display: flex;
-    border: 1px solid white;
+
     justify-content: flex-end;
     align-items: center;
 }
@@ -99,7 +110,7 @@ body {
     padding: 1rem;
 }
 .page1 main .contain >h1 {
-    font-size: 55px;
+    font-size: 80px;
     color: var(--color-primary);
     font-weight: 900;
 }
@@ -111,9 +122,32 @@ body {
     font-weight: 900;
 }
 .page1 main .contain >button {
-    font-size: 50px;
+    margin-top: 15px;
+    display: flex;
+    align-self: flex-start;
+    border:none;
+    border-radius: 5px;
+    font-size: 20px;
     color: var(--color-secundary);
     background:var(--color-primary);
-    padding: 1rem;
     font-weight: 900;
+}
+.page2 {
+    padding: 2rem;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--color-secundary);
+}
+.page2 .box1 {
+    max-width: 100%;
+    max-height: 100%;
+    display: flex;
+    flex-flow:row;
+}
+.page2 .box1 .img {
+
+}
+.page2 .box1 .img >img {
+    max-width: 100%;
+    max-height: 100%;
 }
