--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: "Roboto Slab";
+    font-family: "Roboto Slab",serif;
 }
 
 body {
@@ -133,21 +133,45 @@ body {
     font-weight: 900;
 }
 .page2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 2rem;
     width: 100%;
     height: 100vh;
     background-color: var(--color-secundary);
 }
 .page2 .box1 {
-    max-width: 100%;
-    max-height: 100%;
     display: flex;
-    flex-flow:row;
+    flex-direction:row;
+    margin: 10%;
 }
 .page2 .box1 .img {
+    width: 50%;
+    height: 50vh;
+}
+.page2 .box1 .text {
+    width: 50%;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+}
+.page2 .box1 .text >h1 {
+    display: flex;
+    align-self: flex-start;
+    color: var(--color-font);
+    font-size: 60px;
+    font-weight: 900;
 
 }
-.page2 .box1 .img >img {
-    max-width: 100%;
-    max-height: 100%;
-}
+ .page2 .box1 .text >p {
+    display: flex;
+    align-self:flex-start;
+    justify-content: flex-start;
+    font-size: 20px;
+    color: var(--color-font);
+
+ }
+
+
