--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@ body {
 
 .page1 header .menu {
     width: 100%;
-    margin: 15px;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -92,7 +91,6 @@ body {
     width: 50%;
     height: 80vh;
     display: flex;
-
     justify-content: flex-end;
     align-items: center;
 }
@@ -205,7 +203,6 @@ body {
     height: 90vh;
 
  }
-
  .page4 main .imgbox {
     display: flex;
     flex-flow: row wrap;
@@ -217,9 +214,12 @@ body {
 
  }
  .page4 main .imgbox img {
-    display: flex;
     width: 340px;
     object-fit: contain;    
+ }
+ .page5 {
+    width: 100%;
+    height: 100vh;
  }
 
 
