--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,35 @@ body {
  .page5 {
     width: 100%;
     height: 100vh;
- }
+    background:var(--color-secundary) ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(../storage/img/placeYourImageHereOur0.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
 
+ }
+.page5 .text {
+    display: flex;
+    flex-flow: column wrap;
+    width: 50rem;
+    height: 45rem;
+    background: var(--color-secundary);
+    border: 5px solid var(--color-primary);
+    padding: 5rem;
+}
+.page5 .text h3 {
+    color: var(--color-font);
+    font-size: 45px;
+    font-weight: 900;
+    text-align: center;
+    padding-bottom: 20px;
+}
+.page5 .text p {
+    color: var(--color-font);
+    font-size: 35px;
+    font-weight: 600;
+    text-align: center;
+}
 
