--- a/css/style.css
+++ b/css/style.css
@@ -51,18 +51,22 @@ body {
     align-items: flex-start;
 }
 
-.page1 header .menu .part1>p {
+.page1 header .menu .part1>a {
     color: white;
     font-family: "Roboto Slab";
     font-weight: 900;
     text-transform: uppercase;
+    text-decoration: none;
+    z-index: 2;
 }
 
-.page1 header .menu .part2>p {
+.page1 header .menu .part2>a {
     color: white;
     font-family: "Roboto Slab";
     font-weight: 900;
     text-transform: uppercase;
+    text-decoration: none;
+    z-index: 2;
 }
 
 .page1 header .menu .part2 {
@@ -250,5 +254,77 @@ body {
     font-size: 35px;
     font-weight: 600;
     text-align: center;
+}
+.page6 {
+    width: 100%;
+    height: 100vh;
+    background:var(--color-secundary) ;
+}
+.page6 header {
+    width: 100%;
+    height: 20vh;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.page6 header h3 {
+    font-size:40px;
+    color: var(--color-font);
+
+}
+.page6 main{
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+.page6 main .card0 {
+    display: flex;
+    flex-flow: column wrap;
+    width: 25.33%;
+    height: auto;
+}
+.page6 main .img {
+    display: flex;
+    justify-self: center;
+    align-self: center;
+}
+.page6 main .text {
+    color: var(--color-font);
+    text-align: justify;
+    font-size: 15px;
+    padding: 0 2.9rem 0;
+}
+.page6 main .subtitle {
+    margin-top: 20px;
+    color: var(--color-primary);
+    font-weight: 800;
+    font-size: 27px;
+    text-align: center;
+    margin-bottom: 15px;
+}
+.page6 main .price {
+    color: var(--color-primary);
+    font-weight: 500;
+    font-size: 20px;
+    padding: 0 2.9rem 0;
+    margin-top: 15px;
+}
+
+.page6 main .card1 {
+    display: flex;
+    flex-flow: column wrap;
+    width: 25.33%;
+    height: auto;
+
+}
+.page6 main .card2 {
+    display: flex;
+    flex-flow: column wrap;
+    width: 25.34%;
+    height: auto;
+
 }
 
