--- a/css/style.css
+++ b/css/style.css
@@ -327,4 +327,30 @@ body {
     height: auto;
 
 }
+.page7 {
+    width: 100%;
+    height: 100vh;
+    background: var(--color-secundary);
+}
+.page7 header {
+    background:var(--color-primary);
+    width: 100%;
+    height: 40vh;
+}
+.page7 .img {
+    width: 50%;
+    height: 10vh;
+    z-index: 2;
+    position: relative;
+}
+.page7 img {
+width: 500px;
+}
+.page7 header .text {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    width: 70%;
+    height: 50%;
+}
 
