--- a/css/style.css
+++ b/css/style.css
@@ -349,8 +349,72 @@ width: 500px;
 .page7 header .text {
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
     width: 70%;
-    height: 50%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    padding-left:45rem ;
 }
+.page7 header .text h3 {
+    display: flex;
+    align-self: flex-start;
+    margin-bottom: 25px;
+    font-size: 40px;
+    color: var(--color-font);
+    font-weight: 500;
+}
+.page7 header .text p {
+    color: var(--color-font);
+    word-wrap: break-word;
+    font-style: normal;
+    font-size: 20px;
+    font-weight: 500;
+
+}
+.page7 footer {
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    background: var(--color-ternario);
+}
+.page7 footer .logo2 {
+    width: 25rem;
+    height: 5rem;
+    margin-bottom: 2.5rem;
+}
+.page7 footer .logo2 img {
+   width: 100%;
+   object-fit: fill;
+}
+.page7 footer .footermenu {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    width: 56rem;
+}
+.page7 footer .footermenu a {
+    text-decoration: none;
+    color: var(--color-font);
+    font-weight: 500;
+    margin-bottom: 2.5rem;
+    z-index: 2;
+}
+.page7 footer .icons {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    gap: 2rem;
+    width: 56rem;
+}
+.page7 footer .icons i {
+    border-radius: 50%;
+    color: aliceblue;
+    font-size: 50px;
+    
+}
+
+
 
